Fixed readme formatting

--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 heroSlider v0.1a
 
-This is currently an alpha version of the plugin and should be considered unusable until
-a beta version is released.
+This is currently an alpha version of the plugin and should be considered unusable until a beta version is released.
 
 Keep an eye on this page for a usable build.
 
